--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'WhoAsksSatan';
+  src: url('fonts/who\ asks\ satan.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 body {
   background-image: url(fond_intro_rouge_noir_1.png);
   background-position: center;
@@ -8,7 +16,7 @@ body {
   padding:0;
   margin-top: 20px;
   color: #ffffff; /* ou alors #78a39c*/
-  font-family:Georgia, 'Times New Roman', Times, serif;
+  font-family:Georgia, 'Times New Roman', Times, sans serif;
   background-attachment: fixed;
   z-index: 1;
 
@@ -55,7 +63,11 @@ header{
 .menu{
   background-color:#515A5A;
 }
-
+.police{
+  font-family:'WhoAsksSatan', sans-serif;
+  font-size: 800%;
+  color:white;
+}
 
 .contenu {
   text-align: center;
@@ -84,7 +96,7 @@ ul {
 
 footer{
   text-align: center;
-  background-color: #212F3C;
+  background-color: #515A5A;
   width: 100%;
   color: white;
   padding: 10px 0;
@@ -92,3 +104,5 @@ footer{
   border-bottom: 1px solid #ccc;
   flex:1;
 }
+
+
