--- a/style.css
+++ b/style.css
@@ -69,8 +69,10 @@ header{
 .police{
   font-family:'WhoAsksSatan', sans-serif;
   font-size: 800%;
-  color:white;
+  color:#872626;
+  
 }
+
 
 .contenu {
   text-align: center;
